<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFBB33"
            android:contentDescription="@string/app_name"
            android:scaleType="center" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/titleGraph"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="400dp" />

    </RelativeLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.3"
            android:text="@string/btn_export"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent">
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.3"
            android:text="@string/btn_cerrar"
            android:textSize="10sp" />

    </LinearLayout>

</LinearLayout>